--- a/inhuman.varelafont.theme.css
+++ b/inhuman.varelafont.theme.css
@@ -33,6 +33,8 @@
   --channels-background-blur: 0px;
   --chat-background-blur: 0px;
   --memberlist-background-blur: 0px;
+  --customFont: Varela Round;
+  --codeBlocksCustomFont: Varela Round;
   --fullwhite-font: 250, 253, 255;
   --normal-font: 201, 203, 206;
   --normal-hover-font: 212,219,225;
